tests/ui/exclusive-drop-and-copy.stderr
error[E0184]: the trait `Copy` cannot be implemented for this type; the type has a destructor
  --> $DIR/exclusive-drop-and-copy.rs:3:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^ `Copy` not allowed on types with destructors
   |
   = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0184]: the trait `Copy` cannot be implemented for this type; the type has a destructor
  --> $DIR/exclusive-drop-and-copy.rs:10:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^ `Copy` not allowed on types with destructors
   |
   = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0184`.
